# compiler_final

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: TODO.md  c-language-detailed.ebnf  c-language.ebnf  report.md  user-manual.md
docs/report/: report-draft.md  report.md  user-manual.md
docs/report/assets/: README.md
docs/report_kimi/: report.md
runtime/: c9ay.h  c9ay_runtime.c
src/: main.cpp
src/base/: constant_value.hpp  error.h  error.hpp  literal.hpp  printf_format.hpp  string_hash.hpp  util.hpp
src/codegen/: llvm_codegen.hpp  llvm_expression.inl  llvm_statement.inl  llvm_target.hpp  optimization.hpp
src/diagnostic/: diagnostic.hpp  source_map.hpp
src/lexer/: lexer.hpp  scanner.hpp
src/parser/: expression.h  node.h  parser.h  reflect_dispatch.hpp  statement.h  token.h  type_names.hpp  type_specifier.hpp
src/preprocessor/: constant_expression.hpp  preprocessor.hpp
src/reader/: reader.hpp
src/semantic/: constant_evaluator.hpp  semantic_analyzer.hpp  statement_analyzer.inl  symbol.hpp  type.hpp  type_dispatch.hpp  type_layout.hpp
test/: 2.c  diagnostic.c  preprocessor_diagnostic.c  print.c  semantic_diagnostic.c  sizeof.c  struct.c  windows_api_link.c
test/compile_failure/: 01_unknown_type.c  02_undeclared_identifier.c  03_global_redefinition.c  04_local_redefinition.c  05_break_outside_loop.c  06_continue_outside_loop.c  07_return_without_value.c  08_void_return_value.c  09_wrong_argument_count.c  10_call_non_function.c  11_dereference_integer.c  12_address_of_rvalue.c  13_assignment_to_constant.c  14_invalid_pointer_arithmetic.c  15_array_size_zero.c  16_array_size_runtime.c  17_too_many_initializers.c  18_string_too_long.c  19_duplicate_case.c  20_duplicate_default.c  21_missing_struct_member.c  22_duplicate_struct_member.c  23_struct_initializer_overflow.c  24_arrow_on_struct.c  25_dot_on_pointer.c  26_alignof_expression.c  27_sizeof_void.c  28_incompatible_initializer.c  29_incompatible_return.c  30_invalid_subscript.c  31_float_modulo.c  32_invalid_type_combination.c  33_printf_dynamic_format.c
test/compile_success/: 02_integer_arithmetic.c  03_if_else.c  04_loops.c  05_switch.c  06_pointers.c  07_arrays.c  08_multidimensional_array.c  09_typedef.c  10_struct.c  11_recursive_struct_pointer.c  12_function_pointer.c  13_sizeof_alignof.c  14_global_and_static.c  15_preprocessor.c  16_include_runtime.c  17_cast_and_conditional.c  18_array_inference.c  19_integer_types.c  20_floating_types.c  21_pointer_difference.c  22_builtin_printf.c
test/fixtures/: diagnostic_invalid.h  mapped-main.c  preprocessor_value.h
test/new/: 10.c  11.c  12.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
test/panic_recovery/: 01_initializer_then_return.c  02_binary_rhs_then_declaration.c  03_if_condition_then_return.c  04_call_argument_then_return.c  05_subscript_then_return.c  06_two_independent_initializers.c  07_global_then_function.c  08_bad_statement_between_good_ones.c
tests/: fixture_test.cpp  parser_test.cpp
